--- a/pages/students/student_question_page.html
+++ b/pages/students/student_question_page.html
@@ -33,11 +33,12 @@
                 document.getElementById('title').innerText = `Вопрос №${questNumb}`;
 
                 if (questNumb === 1)
-                    document.getElementById('backButton').value = "Назад к тесту"
-                else
-                    document.getElementById('backButton').value = "Предыдущий вопрос"
+                    document.getElementById('backButton').hidden = true
                 if (questNumb === resTextQuests.length)
-                    document.getElementById('nextButton').value = "Закончить тест"
+                    if (resTextSession.type !== "student")
+                        document.getElementById('nextButton').hidden = true
+                    else
+                        document.getElementById('nextButton').value = "Закончить тест"
                 else
                     document.getElementById('nextButton').value = "Следующий вопрос"
 
@@ -94,49 +95,57 @@
 
                 let backButton = document.getElementById('backButton');
                 backButton.onclick = function () {
-                    if (questNumb === 1)
-                        window.location.href = `/professor/${locId}/test/${locCode}/${locAttempt}`;
-                    else
-                        window.location.href = `/student/${locId}/test/${locCode}/${locAttempt}/question/${resTextQuests[questNumb - 2].Question_id}`;
+                    window.location.href = `/student/${locId}/test/${locCode}/${locAttempt}/question/${resTextQuests[questNumb - 2].Question_id}`;
+                };
+
+                let backToTestButton = document.getElementById('backToTestButton');
+                backToTestButton.onclick = function () {
+                    window.location.href = `/student/${locId}/test/${locCode}/${locAttempt}`;
                 };
 
                 let inputs = document.getElementsByTagName('input');
-                inputs = inputs.slice(-2)
                 let nextButton = document.getElementById('nextButton');
                 nextButton.onclick = async function () {
-                    if (questNumb === resTextQuests.length) {
-                        if (await solveQuestion()) {
-                            response = await fetch(`/student/${locId}/test/${locCode}/${locAttempt}/questions/info.json`);
-                            resText = await response.json();
-
-                            let correct_answers = 0;
-                            for (let i = 0; i < resText.length; i++) {
-                                if (resText[i].Is_correct_answer_to_question === 1)
-                                    correct_answers++;
-                            }
-
-                            let testData = {
-                                correct_answers: correct_answers
-                            };
-
-                            let options = {
-                                method: 'POST',
-                                headers: {'Content-Type': 'application/json'},
-                                body: JSON.stringify(testData)
-                            };
-
-                            response = await fetch(`/student/${locId}/test/${locCode}/${locAttempt}/solve`, options);
-
-                            if (response.ok)
-                                window.location.href = `/student/${locId}/test/${locCode}/${locAttempt}`
-                            else {
+                    if (resTextSession.type === "student") {
+                        if (questNumb === resTextQuests.length) {
+                            if (await solveQuestion()) {
+                                response = await fetch(`/student/${locId}/test/${locCode}/${locAttempt}/questions/info.json`);
                                 resText = await response.json();
-                                alert(resText);
+
+                                let correct_answers = 0;
+                                for (let i = 0; i < resText.length; i++) {
+                                    if (resText[i].Is_correct_answer_to_question === 1)
+                                        correct_answers++;
+                                }
+
+                                let testData = {
+                                    correct_answers: correct_answers
+                                };
+
+                                let options = {
+                                    method: 'POST',
+                                    headers: {'Content-Type': 'application/json'},
+                                    body: JSON.stringify(testData)
+                                };
+
+                                response = await fetch(`/student/${locId}/test/${locCode}/${locAttempt}/solve`, options);
+
+                                if (response.ok)
+                                    window.location.href = `/student/${locId}/test/${locCode}/${locAttempt}`
+                                else {
+                                    resText = await response.json();
+                                    alert(resText);
+                                }
                             }
+                        } else {
+                            if (await solveQuestion())
+                                window.location.href = `/student/${locId}/test/${locCode}/${locAttempt}/question/${resTextQuests[questNumb].Question_id}`;
                         }
                     } else {
-                        if (await solveQuestion())
+                        if (questNumb !== resTextQuests.length)
                             window.location.href = `/student/${locId}/test/${locCode}/${locAttempt}/question/${resTextQuests[questNumb].Question_id}`;
+                        else
+                            window.location.href = `/student/${locId}/test/${locCode}/${locAttempt}`
                     }
                 };
 
@@ -192,9 +201,12 @@
             <tbody id="answersLines">
             </tbody>
         </table>
-        <div>
-            <input id="backButton" type="button"/>
+        <div style="margin-bottom: 10px">
+            <input id="backButton" type="button" value="Предыдущий вопрос"/>
             <input id="nextButton" type="button"/>
+        </div>
+        <div>
+            <input id="backToTestButton" type="button" value="Назад к тесту"/>
         </div>
     </form>
 </div>
