--- a/pages/actions/add_student_to_test_page.html
+++ b/pages/actions/add_student_to_test_page.html
@@ -2,7 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Студенты</title>
+    <title>Выбор студента</title>
+    <style>
+        input {
+            border: 1px solid;
+            border-radius: 10px;
+            font-size: medium;
+        }
+        label {
+            font-size: large;
+        }
+        tr {
+            font-size: large;
+        }
+    </style>
     <script>
         "use strict";
 
@@ -198,7 +211,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h2> Студенты </h2>
+    <h1> Выбор студента </h1>
     <form name="students">
         <div style="margin-bottom: 5px">
             <label for="searchFirstName">Имя</label> <input autocomplete="off" autofocus id="searchFirstName"
