--- a/pages/actions/students_page.html
+++ b/pages/actions/students_page.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Студенты</title>
+    <style>
+        input {
+            border: 1px solid;
+            border-radius: 10px;
+            font-size: medium;
+        }
+        label {
+            font-size: large;
+        }
+        tr {
+            font-size: large;
+        }
+    </style>
     <script>
         "use strict";
         window.onload = async function () {
@@ -86,7 +99,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h2> Студенты </h2>
+    <h1> Студенты </h1>
     <form name="students">
         <div style="margin-bottom: 5px">
             <label for="searchFirstName">Имя</label> <input autocomplete="off" autofocus id="searchFirstName"
