--- a/pages/professors/add_question_page.html
+++ b/pages/professors/add_question_page.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Добавить вопрос</title>
+    <style>
+        input {
+            border: 1px solid;
+            border-radius: 10px;
+            font-size: medium;
+        }
+        label {
+            font-size: large;
+        }
+        tr {
+            font-size: large;
+        }
+    </style>
     <script>
         "use strict";
 
@@ -117,7 +130,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h2> Добавить вопрос </h2>
+    <h1> Добавить вопрос </h1>
     <form name="add question">
         <div style="margin-bottom: 5px">
             <label for="text">Текст вопроса</label> <input autocomplete="off" id="text" style="margin-right: 104px"
