--- a/pages/professors/professor_page.html
+++ b/pages/professors/professor_page.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Преподаватель</title>
+    <style>
+        input {
+            border: 1px solid;
+            border-radius: 10px;
+            font-size: medium;
+        }
+        label {
+            font-size: large;
+        }
+        tr {
+            font-size: large;
+        }
+    </style>
     <script>
         "use strict";
         window.onload = async function () {
@@ -105,7 +118,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h2> Страница преподавателя </h2>
+    <h1> Страница преподавателя </h1>
     <form name="professor">
         <div style="margin-bottom: 10px">
             <label id="firstName"></label> <label id="secondName"></label>
