--- a/pages/professors/question_page.html
+++ b/pages/professors/question_page.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Вопрос</title>
+    <style>
+        input {
+            border: 1px solid;
+            border-radius: 10px;
+            font-size: medium;
+        }
+        label {
+            font-size: large;
+        }
+        tr {
+            font-size: large;
+        }
+    </style>
     <script>
         "use strict";
         window.onload = async function () {
@@ -76,7 +89,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h2> Вопрос </h2>
+    <h1> Вопрос </h1>
     <form name="question">
         <div style="margin-bottom: 10px">
             <label id="questionText"></label>
