--- a/pages/students/add_test_to_student_page.html
+++ b/pages/students/add_test_to_student_page.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Выбор теста</title>
+    <style>
+        input {
+            border: 1px solid;
+            border-radius: 10px;
+            font-size: medium;
+        }
+        label {
+            font-size: large;
+        }
+        tr {
+            font-size: large;
+        }
+    </style>
     <script>
         "use strict";
 
@@ -186,7 +199,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h2> Преподаватели </h2>
+    <h1> Выбор теста </h1>
     <form name="test choose">
         <div style="margin-bottom: 5px">
             <label for="searchFirstName">Имя</label> <input autocomplete="off" id="searchFirstName" autofocus
