--- a/pages/students/student_page.html
+++ b/pages/students/student_page.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Студент</title>
+    <style>
+        input {
+            border: 1px solid;
+            border-radius: 10px;
+            font-size: medium;
+        }
+        label {
+            font-size: large;
+        }
+        tr {
+            font-size: large;
+        }
+    </style>
     <script>
         "use strict";
         window.onload = async function () {
@@ -153,7 +166,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h2> Страница студента </h2>
+    <h1> Страница студента </h1>
     <form name="student">
         <div style="margin-bottom: 5px">
             <label id="firstName"></label> <label id="secondName"></label>
