--- a/pages/students/student_question_page.html
+++ b/pages/students/student_question_page.html
@@ -2,7 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Вопрос</title>
+    <title>Вопрос студента</title>
+    <style>
+        input {
+            border: 1px solid;
+            border-radius: 10px;
+            font-size: medium;
+        }
+        label {
+            font-size: large;
+        }
+        tr {
+            font-size: large;
+        }
+    </style>
     <script>
         "use strict";
         window.onload = async function () {
@@ -186,7 +199,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h2 id="title"></h2>
+    <h1> Вопрос студента </h1>
     <form name="question">
         <div style="margin-bottom: 10px">
             <label id="questionText"></label>
