--- a/pages/actions/add_professor_page.html
+++ b/pages/actions/add_professor_page.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Добавить преподавателя</title>
+    <style>
+        input {
+            border: 1px solid;
+            border-radius: 10px;
+            font-size: medium;
+        }
+        label {
+            font-size: large;
+        }
+        tr {
+            font-size: large;
+        }
+    </style>
     <script>
         "use strict";
         window.onload = async function () {
@@ -56,7 +69,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px;">
-    <h2> Добавить преподавателя </h2>
+    <h1> Добавить преподавателя </h1>
     <form name="add professor">
         <div style="margin-bottom: 5px">
             <label for="firstName">Имя</label> <input autocomplete="off" autofocus id="firstName"
