--- a/pages/actions/log_in_page.html
+++ b/pages/actions/log_in_page.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Вход</title>
+    <style>
+        input {
+            border: 1px solid;
+            border-radius: 10px;
+            font-size: medium;
+        }
+        label {
+            font-size: large;
+        }
+        tr {
+            font-size: large;
+        }
+    </style>
     <script>
         "use strict";
         window.onload = function () {
@@ -40,7 +53,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h2> Вход </h2>
+    <h1> Вход </h1>
     <form name="logIn">
         <div style="margin-bottom: 5px">
             <label for="username">Логин</label> <input autofocus id="username" style="margin-right: 48px"
