--- a/pages/professors/question_edit_page.html
+++ b/pages/professors/question_edit_page.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Редактировать вопрос</title>
+    <style>
+        input {
+            border: 1px solid;
+            border-radius: 10px;
+            font-size: medium;
+        }
+        label {
+            font-size: large;
+        }
+        tr {
+            font-size: large;
+        }
+    </style>
     <script>
         "use strict";
 
@@ -209,7 +222,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h2> Редактировать вопрос </h2>
+    <h1> Редактировать вопрос </h1>
     <form name="edit question">
         <div style="margin-bottom: 5px">
             <label for="questionText">Текст вопроса</label> <input autocomplete="off" id="questionText"
