--- a/pages/professors/test_edit_page.html
+++ b/pages/professors/test_edit_page.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Редактировать тест</title>
+    <style>
+        input {
+            border: 1px solid;
+            border-radius: 10px;
+            font-size: medium;
+        }
+        label {
+            font-size: large;
+        }
+        tr {
+            font-size: large;
+        }
+    </style>
     <script>
         "use strict";
         window.onload = async function () {
@@ -62,7 +75,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h2> Редактировать тест </h2>
+    <h1> Редактировать тест </h1>
     <form name="test edit">
         <div style="margin-bottom: 5px">
             <label for="title">Название</label> <input autocomplete="off" autofocus id="title"
@@ -74,7 +87,7 @@
         </div>
         <div style="margin-bottom: 15px">
             <label for="percent">Процент успешного выполнения</label> <input autocomplete="off" id="percent"
-                                                                             style="margin-right:227px"
+                                                                             style="margin-right:247px"
                                                                              type="number"/>
         </div>
         <div>
