--- a/pages/professors/test_page.html
+++ b/pages/professors/test_page.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Тест</title>
+    <style>
+        input {
+            border: 1px solid;
+            border-radius: 10px;
+            font-size: medium;
+        }
+        label {
+            font-size: large;
+        }
+        tr {
+            font-size: large;
+        }
+    </style>
     <script>
         "use strict";
         window.onload = async function () {
@@ -25,6 +38,10 @@
                     document.getElementById("addQuestionButton").hidden = true;
                     document.getElementById("deleteButton").hidden = true;
                     document.getElementById("editButton").hidden = true;
+                }
+
+                if (resTextSession.type === "admin") {
+                    document.getElementById("solveTestButton").hidden = true;
                 }
 
                 response = await fetch(`/professor/${locId}/test/${locCode}/info.json`);
@@ -146,7 +163,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h2> Тест </h2>
+    <h1> Тест </h1>
     <form name="test">
         <div style="margin-bottom: 5px">
             <label>Название:</label> <label id="title"></label>
