--- a/pages/students/student_edit_page.html
+++ b/pages/students/student_edit_page.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Редактировать страницу студента</title>
+    <style>
+        input {
+            border: 1px solid;
+            border-radius: 10px;
+            font-size: medium;
+        }
+        label {
+            font-size: large;
+        }
+        tr {
+            font-size: large;
+        }
+    </style>
     <script>
         "use strict";
         window.onload = async function () {
@@ -76,7 +89,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h2> Редактировать страницу студента </h2>
+    <h1> Редактировать страницу студента </h1>
     <form name="student edit">
         <div style="margin-bottom: 5px">
             <label for="firstName">Имя</label> <input autocomplete="off" autofocus id="firstName"
