--- a/pages/students/student_question_page.html
+++ b/pages/students/student_question_page.html
@@ -199,7 +199,7 @@
 
 <body>
 <div align="center" style="margin-top: 100px">
-    <h1> Вопрос студента </h1>
+    <h1 id="title"></h1>
     <form name="question">
         <div style="margin-bottom: 10px">
             <label id="questionText"></label>
