App 1.6v. Tests were added.

--- a/pages/actions/add_student_to_test_page.html
+++ b/pages/actions/add_student_to_test_page.html
@@ -72,7 +72,7 @@
 
                             studentsTable.innerHTML += "<tr>\n" +
                                 `                <td>${resText[i].First_name} ${resText[i].Second_name}</td>\n` +
-                                `                <td>${resText[i].Group}</td>\n` +
+                                `                <td>${resText[i].Student_group}</td>\n` +
                                 `                <td><input type='button' value='Выбрать'\n` +
                                 `                           onclick="addStudentToTest(${resText[i].Student_id}, ${attempt})"/></td>\n` +
                                 "            </tr>";
@@ -120,7 +120,7 @@
 
                             studentsTable.innerHTML += "<tr>\n" +
                                 `                <td>${resText[i].First_name} ${resText[i].Second_name}</td>\n` +
-                                `                <td>${resText[i].Group}</td>\n` +
+                                `                <td>${resText[i].Student_group}</td>\n` +
                                 `                <td><input type='button' value='Выбрать'\n` +
                                 `                           onclick="addStudentToTest(${resText[i].Student_id}, ${attempt})"/></td>\n` +
                                 "            </tr>";
