--- a/pages/professors/test_page.html
+++ b/pages/professors/test_page.html
@@ -141,7 +141,7 @@
 
                 let backButton = document.getElementById('backButton');
                 backButton.onclick = function () {
-                    window.location.href = `/professor/${locId}`;
+                    window.location.href = `/tests`;
                 };
 
                 let deleteButton = document.getElementById('deleteButton');
